[package]
name = "programming-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
serde = { version = "1.0", features = ["derive"] }
image = "0.13.0"
num = "0.4"

[[bin]]
name = "chapter_one"
path = "src/chapter_one.rs"

[[bin]]
name = "actix_gcd"
path = "src/actix_gcd.rs"

[[bin]]
name = "mandelbrot"
path = "src/mandelbrot.rs"
